# ANTHENA

./: .env.exp  .gitignore  Cargo.toml  README.md  install.md  install.sh
.github/workflows/: rust.yml
DOC/development/: README.md
DOC/development/installer/: installer.md
document/: version.json
document/development/installer/: README.md
src/: main.rs
src/admin/: index.html  index.js  main.rs  style.css
src/installer/: database.rs  env_config.rs  install_postgres.sh  installer.rs  main.rs  mod.rs  postgres.rs  table.rs  ui.rs  user.rs
src/installer/uninstaller/: mod.rs  uninstall.rs
src/installer/updater/: update.rs
src/recovery_system/: main.rs
