[package]
name = "anthena"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
dotenv = "0.15"
tokio = { version ="1", features = ["full"]}
axum = "0.7"
serde = { version = "1" , features = ["derive"]}
serde_json = "1"

[profile.release]
opt-level = 3
lto = true