[package]
name = "anthena"
version = "0.1.22"
edition = "2024"

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
dotenv = "0.15"
actix-web = "4"
serde = { version = "1" , features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-postgres = { version = "0.7", features=["with-chrono-0_4"]}
anyhow = "1.0"
clap = { version = "4.5",features = ["derive"]}
[profile.release]
opt-level = 3
lto = true